--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,6 +1,12 @@
-coverage
-hypothesis
-pyperf
-pytest
-pytest-coverage
-pytest-flake8
+coverage==6.4.2
+faker==13.15.0
+hypothesis==6.50.1
+pygments==2.12.0
+pyperf==2.3.1
+pytest==7.1.2
+pytest-asyncio==0.19.0
+pytest-cov==3.0.0
+pytest-flake8==1.1.1
+pytest-mock==3.8.2
+pytest-sugar==0.9.5
+pytest-toolbox==0.4
