Added default alternate build chain config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,8 @@
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
+[tool.black]
+line-length = 120
+skip-string-normalization = "True"
+target-version = ["py38", "py39", "py310"]
