--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-attrs
-click
-cyclonedx-bom
-jsonschema
-spdx-tools
-xmlschema
+attrs==21.4.0
+cyclonedx-bom==3.5.0
+jsonschema==4.7.2
+spdx-tools==0.6.1
+typer==0.6.1
+xmlschema==1.11.3
