--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,8 +25,6 @@ theme:
 extra:
   generator: false
   social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/sthagen/sbom
     - icon: fontawesome/brands/python
       link: https://pypi.org/project/sbom
     - icon: fontawesome/brands/linkedin
@@ -34,8 +32,8 @@ extra:
 
 copyright: Copyright &copy; 2022 Stefan Hagen under the MIT license
 
-repo_name: sthagen/sbom
-repo_url: https://github.com/sthagen/sbom
+repo_name: ~sthagen/sbom
+repo_url: https://git.sr.ht/~sthagen/prosessilouhinta
 edit_uri: ""
 
 plugins:
