--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
   - Usage: 'usage.md'
   - API: 'api.md'
   - Changes: 'changes.md'
+  - Test Coverage: https://codes.dilettant.life/coverage/sbom/
   - Third-Party: 'third-party/README.md'
 
 markdown_extensions:
