Excluded tests from packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,10 @@ install_requires =
 
 packages = find:
 
+[options.packages.find]
+exclude =
+    test*
+
 [options.entry_points]
 console_scripts =
     sbom=sbom.cli:app
