--- a/setup.cfg
+++ b/setup.cfg
@@ -41,10 +41,10 @@ classifiers =
 python_requires = >=3.8
 
 install_requires =
-    attrs==22.1.0
-    cyclonedx-bom==3.5.0
+    attrs >= 22.1.0
+    cyclonedx-bom >= 3.6.3
     jsonschema >= 4.16.0
-    spdx-tools==0.6.1
+    spdx-tools >= 0.6.1
     typer >= 0.6.1
     xmlschema >= 2.0.4
 
