--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ extra:
 
 copyright: Copyright &copy; 2022 Stefan Hagen under the MIT license
 
-repo_name: ~sthagen/sbom
+repo_name: sthagen/sbom
 repo_url: https://git.sr.ht/~sthagen/prosessilouhinta
 edit_uri: ""
 
