Added logo and favicon to mkdocs config (harmonization 20221210(

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_description: "Tree shaking for the minimal viable software bill of material
 
 theme:
   name: 'material'
+  logo: assets/logo.png
+  favicon: images/favicon.ico
   features:
     - navigation.expand
     - toc.integrate
