--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,131 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "sbom"
+version = "2022.7.17"
+description = "Tree shaking for the minimal viable SBOM."
+readme = "README.md"
+authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
+maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Software Development :: Build Tools",
+]
+keywords = [
+    "baseline",
+    "cyclonedx",
+    "developer-tools",
+    "extension",
+    "software-bill-of-materials",
+    "spdx",
+    "validation",
+]
+dependencies = [
+    "attrs >= 22.2.0",
+    "cyclonedx-bom >= 3.10.1",
+    "jsonschema >= 4.17.3",
+    "spdx-tools >= 0.6.1",
+    "typer >= 0.7.0",
+    "xmlschema >= 2.1.1",
+]
+requires-python = ">=3.9"
+
+[project.optional-dependencies]
+dev = ["black", "coverage", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "ruff"]
+
+[project.urls]
+Homepage = "https://git.sr.ht/~sthagen/sbom"
+Bug-Tracker = "https://todo.sr.ht/~sthagen/sbom"
+Documentation = "https://codes.dilettant.life/docs/sbom"
+Source-Code = "https://git.sr.ht/~sthagen/sbom"
+Test-Coverage = "https://codes.dilettant.life/coverage/sbom"
+
+[project.scripts]
+sbom = "sbom.cli:app"
+
+[tool.setuptools.packages.find]
+include = ["sbom"]
+exclude = ["test*"]
+
+[bdist_wheel]
+universal = true
+
 [tool.black]
 line-length = 120
-skip-string-normalization = "True"
-target-version = ["py38", "py39", "py310"]
+skip-string-normalization = true
+target-version = ["py39", "py310", "py311"]
+
+[tool.coverage.run]
+branch = true
+
+[tool.coverage.report]
+precision = 2
+exclude_lines = [
+    "pragma: no cover",
+    "raise NotImplementedError",
+    "if TYPE_CHECKING:",
+    "@overload",
+]
+omit = [
+    "*/__main__.py",
+]
+
+[tool.ruff]
+line-length = 120
+select = ["E", "F", "Q"]
+ignore = []
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+target-version = "py310"
+unfixable = ["F401"]
+
+[tool.ruff.flake8-quotes]
+docstring-quotes = "double"
+inline-quotes = "single"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["E402"]
+
+[tool.ruff.flake8-import-conventions.aliases]
+altair = "alt"
+"matplotlib.pyplot" = "plt"
+numpy = "np"
+pandas = "pd"
+seaborn = "sns"
+
+[tool.ruff.mccabe]
+max-complexity = 42  # default is 10
+
+[tool.mypy]
+strict = true
+implicit_reexport = true
+
+[tool.pytest]
+testpaths = "test"
+filterwarnings = "error"
