--- a/sbom/spdx.yaml
+++ b/sbom/spdx.yaml
@@ -3,7 +3,7 @@ SPDXID: "SPDXRef-DOCUMENT"
 spdxVersion: "SPDX-2.3"
 creationInfo:
   comment: "Converted from CycloneDX spec version 1.4"
-  created: "2023-08-16T06:43:09Z"
+  created: "2023-08-20T08:24:43Z"
   creators:
   - "Tool: CycloneDX:cyclonedx-bom-3.11.2"
   - "Tool: CycloneDX:cyclonedx-python-lib-3.1.5"
@@ -12,87 +12,15 @@ creationInfo:
 name: "From-Cyclone-DX"
 dataLicense: "CC0-1.0"
 annotations:
-- annotationDate: "2023-08-16T06:43:12Z"
+- annotationDate: "2023-08-20T08:24:46Z"
   annotationType: "OTHER"
   annotator: "Tool: CycloneToSpdx"
   comment: "MISSING_CDX_PROPERTY:extensions={}"
-documentNamespace: "https://cyclonedx/877b9f4c-a7d8-4241-9bdf-a7b074b3b0da_1"
+documentNamespace: "https://cyclonedx/1a7d1ebc-466f-41a0-9868-b031005dbca5_1"
 packages:
-- SPDXID: "SPDXRef-58a3024a-2cf9-41be-b65a-2bf74450cb95"
+- SPDXID: "SPDXRef-1c4f4468-bcca-4769-bfe4-cf7c3b46c090"
   annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
-    annotationType: "OTHER"
-    annotator: "Tool: CycloneToSpdx"
-    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
-  copyrightText: "NOASSERTION"
-  downloadLocation: "NOASSERTION"
-  externalRefs:
-  - referenceCategory: "PACKAGE-MANAGER"
-    referenceLocator: "pkg:pypi/cyclonedx-bom@3.11.2"
-    referenceType: "purl"
-  filesAnalyzed: false
-  licenseConcluded: "NOASSERTION"
-  licenseDeclared: "NOASSERTION"
-  name: "cyclonedx-bom"
-  primaryPackagePurpose: "LIBRARY"
-  versionInfo: "3.11.2"
-- SPDXID: "SPDXRef-5a0edc63-d6db-4712-86bd-ec7f43387f3d"
-  annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
-    annotationType: "OTHER"
-    annotator: "Tool: CycloneToSpdx"
-    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
-  copyrightText: "NOASSERTION"
-  downloadLocation: "NOASSERTION"
-  externalRefs:
-  - referenceCategory: "PACKAGE-MANAGER"
-    referenceLocator: "pkg:pypi/attrs@23.1.0"
-    referenceType: "purl"
-  filesAnalyzed: false
-  licenseConcluded: "NOASSERTION"
-  licenseDeclared: "NOASSERTION"
-  name: "attrs"
-  primaryPackagePurpose: "LIBRARY"
-  versionInfo: "23.1.0"
-- SPDXID: "SPDXRef-2ce67c46-5f7d-4153-96d1-ab5d8bdcc149"
-  annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
-    annotationType: "OTHER"
-    annotator: "Tool: CycloneToSpdx"
-    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
-  copyrightText: "NOASSERTION"
-  downloadLocation: "NOASSERTION"
-  externalRefs:
-  - referenceCategory: "PACKAGE-MANAGER"
-    referenceLocator: "pkg:pypi/spdx-tools@0.8.0"
-    referenceType: "purl"
-  filesAnalyzed: false
-  licenseConcluded: "NOASSERTION"
-  licenseDeclared: "NOASSERTION"
-  name: "spdx-tools"
-  primaryPackagePurpose: "LIBRARY"
-  versionInfo: "0.8.0"
-- SPDXID: "SPDXRef-4a9224f4-b347-4559-a0ab-e1e959dc9d25"
-  annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
-    annotationType: "OTHER"
-    annotator: "Tool: CycloneToSpdx"
-    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
-  copyrightText: "NOASSERTION"
-  downloadLocation: "NOASSERTION"
-  externalRefs:
-  - referenceCategory: "PACKAGE-MANAGER"
-    referenceLocator: "pkg:pypi/jsonschema@4.19.0"
-    referenceType: "purl"
-  filesAnalyzed: false
-  licenseConcluded: "NOASSERTION"
-  licenseDeclared: "NOASSERTION"
-  name: "jsonschema"
-  primaryPackagePurpose: "LIBRARY"
-  versionInfo: "4.19.0"
-- SPDXID: "SPDXRef-e699dfc8-68e5-4181-b33b-ee7f409c74b7"
-  annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
+  - annotationDate: "2023-08-20T08:24:46Z"
     annotationType: "OTHER"
     annotator: "Tool: CycloneToSpdx"
     comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
@@ -108,9 +36,81 @@ packages:
   name: "xmlschema"
   primaryPackagePurpose: "LIBRARY"
   versionInfo: "2.4.0"
-- SPDXID: "SPDXRef-ac0956c7-391f-4f9b-bc76-fec0178820ed"
+- SPDXID: "SPDXRef-5ae403b9-a3f2-43a3-ba7c-039796ec4bda"
   annotations:
-  - annotationDate: "2023-08-16T06:43:12Z"
+  - annotationDate: "2023-08-20T08:24:46Z"
+    annotationType: "OTHER"
+    annotator: "Tool: CycloneToSpdx"
+    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
+  copyrightText: "NOASSERTION"
+  downloadLocation: "NOASSERTION"
+  externalRefs:
+  - referenceCategory: "PACKAGE-MANAGER"
+    referenceLocator: "pkg:pypi/referencing@0.30.2"
+    referenceType: "purl"
+  filesAnalyzed: false
+  licenseConcluded: "NOASSERTION"
+  licenseDeclared: "NOASSERTION"
+  name: "referencing"
+  primaryPackagePurpose: "LIBRARY"
+  versionInfo: "0.30.2"
+- SPDXID: "SPDXRef-7071b33e-af6f-43a9-8e04-18d3b03a8fe8"
+  annotations:
+  - annotationDate: "2023-08-20T08:24:46Z"
+    annotationType: "OTHER"
+    annotator: "Tool: CycloneToSpdx"
+    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
+  copyrightText: "NOASSERTION"
+  downloadLocation: "NOASSERTION"
+  externalRefs:
+  - referenceCategory: "PACKAGE-MANAGER"
+    referenceLocator: "pkg:pypi/jsonschema@4.19.0"
+    referenceType: "purl"
+  filesAnalyzed: false
+  licenseConcluded: "NOASSERTION"
+  licenseDeclared: "NOASSERTION"
+  name: "jsonschema"
+  primaryPackagePurpose: "LIBRARY"
+  versionInfo: "4.19.0"
+- SPDXID: "SPDXRef-fce9c9a1-dd7d-44f1-a6f0-afd32812648d"
+  annotations:
+  - annotationDate: "2023-08-20T08:24:46Z"
+    annotationType: "OTHER"
+    annotator: "Tool: CycloneToSpdx"
+    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
+  copyrightText: "NOASSERTION"
+  downloadLocation: "NOASSERTION"
+  externalRefs:
+  - referenceCategory: "PACKAGE-MANAGER"
+    referenceLocator: "pkg:pypi/spdx-tools@0.8.0"
+    referenceType: "purl"
+  filesAnalyzed: false
+  licenseConcluded: "NOASSERTION"
+  licenseDeclared: "NOASSERTION"
+  name: "spdx-tools"
+  primaryPackagePurpose: "LIBRARY"
+  versionInfo: "0.8.0"
+- SPDXID: "SPDXRef-e32263ae-fdcb-4dab-8967-bcae44d1bb3e"
+  annotations:
+  - annotationDate: "2023-08-20T08:24:46Z"
+    annotationType: "OTHER"
+    annotator: "Tool: CycloneToSpdx"
+    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
+  copyrightText: "NOASSERTION"
+  downloadLocation: "NOASSERTION"
+  externalRefs:
+  - referenceCategory: "PACKAGE-MANAGER"
+    referenceLocator: "pkg:pypi/attrs@23.1.0"
+    referenceType: "purl"
+  filesAnalyzed: false
+  licenseConcluded: "NOASSERTION"
+  licenseDeclared: "NOASSERTION"
+  name: "attrs"
+  primaryPackagePurpose: "LIBRARY"
+  versionInfo: "23.1.0"
+- SPDXID: "SPDXRef-b7ceb856-61fb-488b-a60d-cad6c30e1fd8"
+  annotations:
+  - annotationDate: "2023-08-20T08:24:46Z"
     annotationType: "OTHER"
     annotator: "Tool: CycloneToSpdx"
     comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
@@ -126,22 +126,43 @@ packages:
   name: "typer"
   primaryPackagePurpose: "LIBRARY"
   versionInfo: "0.9.0"
+- SPDXID: "SPDXRef-8a3ab9a7-7bc7-47c4-9966-0644a9cf7de8"
+  annotations:
+  - annotationDate: "2023-08-20T08:24:46Z"
+    annotationType: "OTHER"
+    annotator: "Tool: CycloneToSpdx"
+    comment: "MISSING_CDX_PROPERTY:componentType=\"LIBRARY\""
+  copyrightText: "NOASSERTION"
+  downloadLocation: "NOASSERTION"
+  externalRefs:
+  - referenceCategory: "PACKAGE-MANAGER"
+    referenceLocator: "pkg:pypi/cyclonedx-bom@3.11.2"
+    referenceType: "purl"
+  filesAnalyzed: false
+  licenseConcluded: "NOASSERTION"
+  licenseDeclared: "NOASSERTION"
+  name: "cyclonedx-bom"
+  primaryPackagePurpose: "LIBRARY"
+  versionInfo: "3.11.2"
 relationships:
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-e699dfc8-68e5-4181-b33b-ee7f409c74b7"
+  relatedSpdxElement: "SPDXRef-5ae403b9-a3f2-43a3-ba7c-039796ec4bda"
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-4a9224f4-b347-4559-a0ab-e1e959dc9d25"
+  relatedSpdxElement: "SPDXRef-7071b33e-af6f-43a9-8e04-18d3b03a8fe8"
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-58a3024a-2cf9-41be-b65a-2bf74450cb95"
+  relatedSpdxElement: "SPDXRef-fce9c9a1-dd7d-44f1-a6f0-afd32812648d"
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-ac0956c7-391f-4f9b-bc76-fec0178820ed"
+  relatedSpdxElement: "SPDXRef-8a3ab9a7-7bc7-47c4-9966-0644a9cf7de8"
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-2ce67c46-5f7d-4153-96d1-ab5d8bdcc149"
+  relatedSpdxElement: "SPDXRef-e32263ae-fdcb-4dab-8967-bcae44d1bb3e"
 - spdxElementId: "SPDXRef-DOCUMENT"
   relationshipType: "DESCRIBES"
-  relatedSpdxElement: "SPDXRef-5a0edc63-d6db-4712-86bd-ec7f43387f3d"
+  relatedSpdxElement: "SPDXRef-1c4f4468-bcca-4769-bfe4-cf7c3b46c090"
+- spdxElementId: "SPDXRef-DOCUMENT"
+  relationshipType: "DESCRIBES"
+  relatedSpdxElement: "SPDXRef-b7ceb856-61fb-488b-a60d-cad6c30e1fd8"
