--- a/etc/mkdocs.yml
+++ b/etc/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: SBOM
 site_description: "Tree shaking for the minimal viable software bill of materials (SBOM)."
+docs_dir: ../docs
+site_dir: ../site
 
 theme:
   name: 'material'
